# web-todo

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  state.json  web-todo-chapter9.postman_collection.json
javascript/: login.js  main.js
migrations/2021-03-07-183805_create_to_do_items/: down.sql  up.sql
migrations/2021-03-11-221438_create_users/: up.sql
migrations/2021-03-13-152821_user_title_constraint/: up.sql
src/: file-based.rs  multiple-web.rs  processes.rs  thread.rs  web-actix.rs  web-basic.rs  web-db.rs  web-rest.rs  web-views.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/json_serialization/: mod.rs  todo_items.rs
src/models/item/: new_item.rs
src/models/user/: new_user.rs
src/todo/: mod.rs
src/todo/structs/: base.rs  done.rs  pending.rs
src/todo/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  logout.rs  mod.rs
src/views/auth/: login.rs  mod.rs
src/views/todo/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: login.html  main.html
templates/components/: header.html
