[package]
name = "web-todo"
version = "0.1.0"
authors = ["Bill Barekas <bbarekas@wappier.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "2"
actix-rt = "1.0"
actix-service = "1.0.6"
async-std = "1.6.3"
bcrypt = "0.8.2"
diesel = { version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
futures = "0.3.5"
hmac = "0.8.1"
jwt = "0.9.0"
serde = "1"
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
sha2 = "0.9"
uuid = {version = "0.8", features = ["serde", "v4"]}


[[bin]]
name = "file-based"
path = "src/file-based.rs"

[[bin]]
name = "web-actix"
path = "src/web-actix.rs"

[[bin]]
name = "thread"
path = "src/thread.rs"

[[bin]]
name = "multiple-web"
path = "src/multiple-web.rs"

[[bin]]
name = "web-views"
path = "src/web-views.rs"

[[bin]]
name = "web-basic"
path = "src/web-basic.rs"

[[bin]]
name = "web-db"
path = "src/web-db.rs"

[[bin]]
name = "web-rest"
path = "src/web-rest.rs"
